changed all appearances of idimmaa to mayowa

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Idimma Blog</title>
+  <title>mayowa Blog</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header>
     <div class="logo">
-      <a href="https://idimma.com" id="home-link">Idimma.com</a>
+      <a href="https://mayowa.com" id="home-link">mayowa.com</a>
     </div>
     <nav>
       <ul>
@@ -32,7 +32,7 @@
   </main>
 
   <footer>
-    <p>© 2024 Idimma Blog</p>
+    <p>© 2024 mayowa Blog</p>
   </footer>
 </body>
 </html>
